# resume

./: .gitignore  README.md  flake.nix  index.html  package-lock.json  pelicanconf.py  publishconf.py  pyproject.toml
content/: article copy.md
content/pages/: education.md  page1.md  page2.md  research.md  work.md
content/pages/home/: home.md  sketch.js
css/: custom.css  custom.css.map  print.css  styles.css  styles.css.map
scss/: styles.scss
theme/static/css/: layout.css
