[tool.poetry]
name = "paul-resume"
version = "1.0.0"
description = "My online resume"
authors = ["Paul Lemarre"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
